# ParqueMarinoBackend

./: .env.example  db.sqlite3  pyproject.toml  requirements.txt
api/: __init__.py  urls.py
api/v1/: __init__.py  base_views.py  routers.py  urls.py
apps/business/documents/: admin.py  (+8 more)
config/: __init__.py  api_urls.py  settings.py  storage_backends.py  urls.py
config/settings/: __init__.py  base.py  development.py  production.py
core/: __init__.py
core/middleware/: __init__.py
core/permissions/: __init__.py
core/utils/: __init__.py
docker/: Dockerfile  docker-compose.yml
docs/: BACKEND_OVERVIEW.md  DESCRIPCION_GENERAL_BACKEND.md  DOCUMENTATION_ORGANIZATION.md  DOCUMENTATION_SUMMARY.md  ORGANIZACION_DOCUMENTACION.md  README.md  README_ES.md  RESUMEN_DOCUMENTACION.md  SYSTEM_MODULES.md  VISTA_GENERAL_MODULOS_SISTEMA.md
docs/api/: DOCUMENTACION_RUTAS_API.md  README.md  ROUTE_DOCUMENTATION.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  REORGANIZATION_SUMMARY.md  SUMMARY_OF_CHANGES.md
docs/deployment/: MIGRATION_GUIDE.md  README.md  S3_FILE_DELETION_README.md  SETTINGS_INSTRUCTIONS.md
docs/guides/: API_DOCUMENTATION.md  API_README.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_README.md  FRONTEND_INTEGRATION_SUMMARY.md  FRONTEND_TESTING_GUIDE.md  PROJECT_README.md  QUICK_REFERENCE.md  README.md
docs/testing/: WILDLIFE_TEST_REPORT.md
tests/: conftest.py  manual_messaging_test.py  run_messaging_tests.py  test_twilio.py  test_twilio_import.py  test_twilio_integration.py
utils/: __init__.py
(+182 files in other folders)
